# source-code-scanner

./: Cargo.toml  README.md  demo_report.md
.github/workflows/: rust.yml
src/: hardcoded.rs  main.rs  models.rs
