[package]
name = "source-code-scanner"
version = "1.0.3"
edition = "2021"
repository = "https://github.com/RustamIrzaev/source-code-scanner"
authors = ["Rustam Irzaiev"]
description = "Not that simple source code scanner with reports, statistics and more"
license = "MIT"

[dependencies]
walkdir = "2.5.0"
clap = {version = "4.5.7", features = ["derive"]}
colored = "2.1.0"